# Dawkins-Weasel

./: CMakeLists.txt  README.md
include/: EvolutionManager.h  InputOutput.h  LocalizationManager.h  XMLManager.h
resources/: english-us.localized
src/: EvolutionManager.cpp  InputOutput.cpp  LocalizationManager.cpp  XMLManager.cpp  main.cpp
